# TheBeakersStack

./: .gitignore  .gitmodules
Client/: package.json  pnpm-lock.yaml  svelte.config.js
Client/src/articles/: testing.toml
Client/src/lib/: types.ts  utils.ts
Client/src/routes/article/: +page.svelte
Client/src/routes/article/[slug]/: +page.server.ts  +page.svelte
Professor-App/: package.json  pnpm-lock.yaml
Professor-App/src-tauri/: Cargo.toml  tauri.conf.json
Professor-App/src-tauri/src/: main.rs
Professor-App/src/routes/: +page.svelte
Server/: acs_scrapping.py  classes.py  llm_summerize.py  testing.ipynb  top_10_items_of_the_week.pkl
Server/docker_stuff/: docker-compose.yml
Server/docker_stuff/pb_data/: auxiliary.db  data.db
Types/: Article.ts
tauri-app/: package.json  pnpm-lock.yaml
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs
tauri-app/src-tauri/src/substuff/: Cargo.toml
tauri-app/src-tauri/src/substuff/src/: gitauth.rs  lib.rs  main.rs
tauri-app/src/lib/: classes.svelte.ts  index.ts  stores.ts  utils.ts
tauri-app/src/routes/: +page.svelte  LoginGit.svelte  LoginLocal.svelte
tauri-app/src/routes/edit_toml/: +page.svelte  Header.svelte  Sidebar.svelte  TomlForm.svelte
tauri-app/src/routes/edit_toml/review/: +page.svelte
tauri-app/src/routes/loading/: +page.svelte
