[package]
name = "substuff"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
git2 = "0.20.0"
glob = "0.3.2"
itertools = "0.14.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"

[[bin]]
name = "git_testing"
path = "src/gitauth.rs"
