[package]
name = "substuff"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
git2 = "0.20.0"
glob = "0.3.2"
itertools = "0.14.0"
octocrab = "0.43.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"

[[bin]]
name = "git_testing"
path = "src/gitauth.rs"
